--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>On-Call Dashboard</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <h1>On-Call Dashboard for ED - AIIMS Raipur</h1>
+        <h2 id="dateTitle"></h2>
+        <table id="callTable">
+            <thead>
+                <tr>
+                    <th>Department</th>
+                    <th>First Call</th>
+                    <th>Second Call</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Rows will be inserted here dynamically -->
+            </tbody>
+        </table>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
