--- a/index.html
+++ b/index.html
@@ -1,11 +1,56 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>On-Call Dashboard</title>
-    <link rel="stylesheet" href="style.css">
+    <title>On-Call Dashboard - AIIMS Raipur</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            width: 80%;
+            margin: 50px auto;
+            text-align: center;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: center;
+        }
+
+        th {
+            background-color: #f2f2f2;
+        }
+
+        td {
+            cursor: pointer;
+        }
+
+        td:hover {
+            background-color: #f0f0f0;
+        }
+
+        .phone-number {
+            color: #007bff;
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -20,10 +65,62 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- Rows will be inserted here dynamically -->
+                <!-- Data will be inserted here -->
             </tbody>
         </table>
     </div>
-    <script src="script.js"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const today = new Date();
+            const day = today.getDate();
+            const month = today.getMonth() + 1;  // Months are 0-based in JavaScript
+            const year = today.getFullYear();
+            const dateString = `${day < 10 ? '0' + day : day}-${month < 10 ? '0' + month : month}-${year.toString().slice(2)}`;
+            const dateTitle = document.getElementById('dateTitle');
+            dateTitle.innerText = `On-Call Information for ${dateString}`;
+
+            // Fetch the JSON data from the `calldata/roster.json` file
+            fetch('calldata/roster.json')
+                .then(response => response.json())
+                .then(data => {
+                    const roster = data.DutyRoster;
+                    const todayRoster = roster.find(item => item.Date === dateString);
+
+                    if (todayRoster) {
+                        const tableBody = document.getElementById('callTable').getElementsByTagName('tbody')[0];
+                        const newRow = tableBody.insertRow();
+
+                        // Insert department
+                        const departmentCell = newRow.insertCell();
+                        departmentCell.textContent = data.Department;
+
+                        // First Call
+                        const firstCallCell = newRow.insertCell();
+                        firstCallCell.innerHTML = `<strong>${todayRoster.FirstCall.Name}</strong><br><span class="phone-number">${todayRoster.FirstCall.Number}</span>`;
+
+                        // Second Call
+                        const secondCallCell = newRow.insertCell();
+                        secondCallCell.innerHTML = `<strong>${todayRoster.SecondCall.Name}</strong><br><span class="phone-number">${todayRoster.SecondCall.Number}</span>`;
+
+                        // Add copy functionality for phone numbers
+                        document.querySelectorAll('.phone-number').forEach(cell => {
+                            cell.addEventListener('click', function() {
+                                const phoneNumber = this.textContent;
+                                navigator.clipboard.writeText(phoneNumber).then(() => {
+                                    alert('Phone number copied to clipboard!');
+                                });
+                            });
+                        });
+                    } else {
+                        dateTitle.innerText = 'No on-call information available for today.';
+                    }
+                })
+                .catch(err => {
+                    console.error('Error fetching JSON:', err);
+                    dateTitle.innerText = 'Failed to load on-call information.';
+                });
+        });
+    </script>
 </body>
 </html>
