--- a/index.html
+++ b/index.html
@@ -29,22 +29,10 @@
             margin-bottom: 20px;
         }
 
-        .date-navigation button {
-            background-color: #007bff;
-            color: white;
-            border: none;
+        .date-navigation input[type="date"] {
+            font-size: 16px;
             padding: 10px;
             cursor: pointer;
-            font-size: 16px;
-        }
-
-        .date-navigation button:hover {
-            background-color: #0056b3;
-        }
-
-        .date-navigation span {
-            font-size: 20px;
-            margin: 0 20px;
         }
 
         table {
@@ -81,11 +69,9 @@
     <div class="container">
         <h1>On-Call Dashboard for ED - AIIMS Raipur</h1>
         
-        <!-- Date Navigation -->
+        <!-- Date Navigation with Date Input -->
         <div class="date-navigation">
-            <button id="prevDay">←</button>
-            <span id="dateTitle"></span>
-            <button id="nextDay">→</button>
+            <input type="date" id="datePicker">
         </div>
         
         <table id="callTable">
@@ -122,7 +108,7 @@
             const day = date.getDate();
             const month = date.getMonth() + 1; // Months are 0-based
             const year = date.getFullYear();
-            return `${day < 10 ? '0' + day : day}-${month < 10 ? '0' + month : month}-${year.toString().slice(2)}`;
+            return `${year}-${month < 10 ? '0' + month : month}-${day < 10 ? '0' + day : day}`;
         }
 
         function updateTableForDate(date) {
@@ -171,15 +157,11 @@
             });
         }
 
-        // Handle next and previous day navigation
-        document.getElementById('prevDay').addEventListener('click', function() {
-            currentDate.setDate(currentDate.getDate() - 1);
-            updateTableForDate(currentDate);
-        });
-
-        document.getElementById('nextDay').addEventListener('click', function() {
-            currentDate.setDate(currentDate.getDate() + 1);
-            updateTableForDate(currentDate);
+        // Handle date selection
+        document.getElementById('datePicker').value = formatDate(currentDate);  // Set default date to current date
+        document.getElementById('datePicker').addEventListener('change', function() {
+            const selectedDate = new Date(this.value);
+            updateTableForDate(selectedDate);
         });
     </script>
 </body>
