--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         let currentRoster = [];  // Store the roster for the current day
 
         // Fetch the JSON data from the `calldata/roster.json` file
-        fetch('calldata/roster.json')
+        fetch('calldata/rooster.json')
             .then(response => response.json())
             .then(data => {
                 rosterData = data.Departments;  // Store all the department data
