--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         // List of all the department files in the 'calldata' folder (you must manually list these here)
         const departmentFiles = [
-            'calldata/department1.json'
+            'calldata/Burns and Plastic Surgery.json'
             // Add more department JSON files here if needed
         ];
 
