--- a/index.html
+++ b/index.html
@@ -1,206 +1,239 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>On-Call Dashboard - AIIMS Raipur</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            margin: 0;
-            padding: 0;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>On-Call Dashboard - AIIMS Raipur</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Roboto, sans-serif;
+      background-color: #eef2f7;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
 
-        .container {
-            width: 80%;
-            margin: 50px auto;
-            text-align: center;
-        }
+    .container {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+    }
 
-        h1 {
-            color: #333;
-        }
+    h1 {
+      font-size: 28px;
+      margin-bottom: 10px;
+      color: #2c3e50;
+    }
 
-        .current-day {
-            font-size: 18px;
-            color: #555;
-            margin-top: 10px;
-        }
+    .current-day {
+      font-size: 16px;
+      color: #666;
+      margin-bottom: 20px;
+    }
 
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
+    .controls {
+      margin-bottom: 20px;
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
 
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: center;
-        }
+    input[type="date"] {
+      padding: 8px 12px;
+      font-size: 14px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
 
-        th {
-            background-color: #f2f2f2;
-        }
+    button {
+      padding: 8px 16px;
+      background-color: #3498db;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-size: 14px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
 
-        td {
-            cursor: pointer;
-        }
+    button:hover {
+      background-color: #2980b9;
+    }
 
-        td:hover {
-            background-color: #f0f0f0;
-        }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
 
-        .phone-number {
-            color: #007bff;
-            text-decoration: underline;
-            cursor: pointer;
-        }
+    th, td {
+      padding: 12px;
+      border-bottom: 1px solid #ddd;
+      text-align: center;
+    }
 
-        #datePicker {
-            padding: 5px 10px;
-            font-size: 14px;
-        }
+    th {
+      background-color: #f9fafc;
+      font-weight: 600;
+    }
 
-        #updateDateButton {
-            padding: 5px 10px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            cursor: pointer;
-            font-size: 14px;
-            margin-left: 10px;
-        }
+    tr:nth-child(even) {
+      background-color: #f4f6f9;
+    }
 
-        #updateDateButton:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    td:hover {
+      background-color: #eaf0f6;
+    }
+
+    .phone-number {
+      color: #3498db;
+      text-decoration: underline;
+      cursor: pointer;
+    }
+
+    @media (max-width: 600px) {
+      .controls {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      table, thead, tbody, th, td, tr {
+        display: block;
+        width: 100%;
+      }
+
+      tr {
+        margin-bottom: 15px;
+        background-color: #fff !important;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+        border-radius: 8px;
+        padding: 10px;
+      }
+
+      th {
+        display: none;
+      }
+
+      td {
+        text-align: left;
+        padding: 8px 10px;
+        border: none;
+      }
+
+      td::before {
+        content: attr(data-label);
+        font-weight: bold;
+        display: block;
+        margin-bottom: 4px;
+        color: #555;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>On-Call Dashboard for ED - AIIMS Raipur</h1>
-        
-        <div id="currentDay" class="current-day"></div>
+  <div class="container">
+    <h1>On-Call Dashboard for ED - AIIMS Raipur</h1>
+    <div id="currentDay" class="current-day"></div>
 
-        <input type="date" id="datePicker" />
-        <button id="updateDateButton">Update Date</button>
-
-        <!-- Table for On-Call Data -->
-        <table id="callTable">
-            <thead>
-                <tr>
-                    <th>Department</th>
-                    <th>First Call</th>
-                    <th>Second Call</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Data will be inserted here -->
-            </tbody>
-        </table>
+    <div class="controls">
+      <input type="date" id="datePicker" />
+      <button id="updateDateButton">Update Date</button>
     </div>
 
-    <script>
-        let currentDate = new Date();
-        let rosterData = [];  // Store the full roster data
-        let currentRoster = [];  // Store the roster for the current day
+    <table id="callTable">
+      <thead>
+        <tr>
+          <th>Department</th>
+          <th>First Call</th>
+          <th>Second Call</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Data will be inserted here -->
+      </tbody>
+    </table>
+  </div>
 
-        // List of all the department files in the 'calldata' folder (you must manually list these here)
-        const departmentFiles = [
-            'calldata/Burns and Plastic Surgery.json', 'calldata/Cardio Vascular & Thoracic Surgery.json'
-            // Add more department JSON files here if needed
-        ];
+  <script>
+    let currentDate = new Date();
+    let rosterData = [];
+    const departmentFiles = [
+      'calldata/Burns and Plastic Surgery.json',
+      'calldata/Cardio Vascular & Thoracic Surgery.json'
+    ];
 
-        // Fetch each department JSON file and combine them into rosterData
-        Promise.all(departmentFiles.map(file => fetch(file).then(response => response.json())))
-            .then(departmentData => {
-                rosterData = departmentData;  // Store all the department data
-                updateTableForDate(currentDate); // Display the data for the current date
-            })
-            .catch(err => {
-                console.error('Error fetching JSON files:', err);
-            });
+    Promise.all(departmentFiles.map(file => fetch(file).then(res => res.json())))
+      .then(data => {
+        rosterData = data;
+        updateTableForDate(currentDate);
+      })
+      .catch(err => console.error('Error loading data:', err));
 
-        function formatDate(date) {
-            const day = date.getDate();
-            const month = date.getMonth() + 1; // Months are 0-based
-            const year = date.getFullYear().toString().slice(-2); // Get last 2 digits of the year
-            return `${day < 10 ? '0' + day : day}-${month < 10 ? '0' + month : month}-${year}`;
+    function formatDate(date) {
+      const day = String(date.getDate()).padStart(2, '0');
+      const month = String(date.getMonth() + 1).padStart(2, '0');
+      const year = date.getFullYear().toString().slice(-2);
+      return `${day}-${month}-${year}`;
+    }
+
+    function getDayOfWeek(date) {
+      return ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"][date.getDay()];
+    }
+
+    function getCurrentDayDisplay(date) {
+      return `${getDayOfWeek(date)}, ${formatDate(date)}`;
+    }
+
+    function updateTableForDate(date) {
+      if (date.getHours() < 8) date.setDate(date.getDate() - 1);
+
+      const dateString = formatDate(date);
+      const dayOfWeek = getDayOfWeek(date);
+      document.getElementById('currentDay').textContent = `On-Call - ${getCurrentDayDisplay(date)} (08AM - 08PM)`;
+
+      const tableBody = document.querySelector('#callTable tbody');
+      tableBody.innerHTML = '';
+
+      let foundData = false;
+
+      rosterData.forEach(dept => {
+        const duty = dept.DutyRoster.find(item => item.Date === dateString && item.Day === dayOfWeek);
+        if (duty) {
+          foundData = true;
+          const row = document.createElement('tr');
+
+          row.innerHTML = `
+            <td data-label="Department">${dept.Department}</td>
+            <td data-label="First Call"><strong>${duty.FirstCall.Name}</strong><br><span class="phone-number" data-phone="${duty.FirstCall.Number}">${duty.FirstCall.Number}</span></td>
+            <td data-label="Second Call"><strong>${duty.SecondCall.Name}</strong><br><span class="phone-number" data-phone="${duty.SecondCall.Number}">${duty.SecondCall.Number}</span></td>
+          `;
+          tableBody.appendChild(row);
         }
+      });
 
-        function getDayOfWeek(date) {
-            const days = ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"];
-            return days[date.getDay()];
-        }
+      if (!foundData) {
+        tableBody.innerHTML = '<tr><td colspan="3">No data available for today</td></tr>';
+      }
 
-        function getCurrentDayDisplay(date) {
-            const dayOfWeek = getDayOfWeek(date);
-            const formattedDate = formatDate(date);
-            return `${dayOfWeek}, ${formattedDate}`;
-        }
-
-        function updateTableForDate(date) {
-            // Check if the time is before 08:00 AM; if so, use the previous day
-            const hours = date.getHours();
-            if (hours < 8) {
-                date.setDate(date.getDate() - 1);  // Go back to the previous day
-            }
-
-            const dateString = formatDate(date);
-            const dayOfWeek = getDayOfWeek(date);
-
-            // Update the current day display with the new format
-            document.getElementById('currentDay').textContent = `On-Call - ${getCurrentDayDisplay(date)} (08AM - 08PM)`;
-
-            // Clear existing table rows
-            const tableBody = document.getElementById('callTable').getElementsByTagName('tbody')[0];
-            tableBody.innerHTML = ''; 
-
-            let foundData = false;
-
-            // Loop through all department data
-            rosterData.forEach(department => {
-                const dutyRoster = department.DutyRoster.find(item => item.Date === dateString && item.Day === dayOfWeek);
-                
-                if (dutyRoster) {
-                    foundData = true;
-                    const newRow = tableBody.insertRow();
-                    const departmentCell = newRow.insertCell();
-                    departmentCell.textContent = department.Department;
-
-                    const firstCallCell = newRow.insertCell();
-                    firstCallCell.innerHTML = `<strong>${dutyRoster.FirstCall.Name}</strong><br><span class="phone-number" data-phone="${dutyRoster.FirstCall.Number}">${dutyRoster.FirstCall.Number}</span>`;
-
-                    const secondCallCell = newRow.insertCell();
-                    secondCallCell.innerHTML = `<strong>${dutyRoster.SecondCall.Name}</strong><br><span class="phone-number" data-phone="${dutyRoster.SecondCall.Number}">${dutyRoster.SecondCall.Number}</span>`;
-                }
-            });
-
-            if (!foundData) {
-                tableBody.innerHTML = '<tr><td colspan="3">No data available for today</td></tr>';
-            }
-
-            // Add click event for phone numbers to initiate a call
-            document.querySelectorAll('.phone-number').forEach(cell => {
-                cell.addEventListener('click', function() {
-                    const phoneNumber = this.getAttribute('data-phone');
-                    window.location.href = `tel:${phoneNumber}`;
-                });
-            });
-        }
-
-        // When the "Update Date" button is clicked
-        document.getElementById('updateDateButton').addEventListener('click', function() {
-            const dateInput = document.getElementById('datePicker').value;
-            if (dateInput) {
-                const selectedDate = new Date(dateInput);
-                updateTableForDate(selectedDate);
-            } else {
-                alert('Please select a date');
-            }
+      document.querySelectorAll('.phone-number').forEach(el => {
+        el.addEventListener('click', () => {
+          window.location.href = `tel:${el.dataset.phone}`;
         });
-    </script>
+      });
+    }
+
+    document.getElementById('updateDateButton').addEventListener('click', () => {
+      const dateInput = document.getElementById('datePicker').value;
+      if (dateInput) {
+        updateTableForDate(new Date(dateInput));
+      } else {
+        alert('Please select a date');
+      }
+    });
+  </script>
 </body>
 </html>
